<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bg_scaffold">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentScrim="?attr/colorPrimaryVariant"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryVariant"
                app:menu="@menu/main_menu">

                <TextView
                    android:id="@+id/title_txt"
                    style="@style/AppTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Instant Authentication -->
                <LinearLayout
                    style="@style/Segment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimaryVariant"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/SegmentItemPadding"
                        app:cardCornerRadius="@dimen/SegmentItemCornerRadius"
                        app:cardElevation="0dp">

                        <pl.droidsonroids.gif.GifImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/auth_platform" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        style="@style/HeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_header_1"
                        android:textAlignment="textStart"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_body_1"
                        android:textAlignment="textStart"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/main_action1_1" />

                        <View
                            android:id="@+id/view"
                            android:layout_width="24dp"
                            android:layout_height="0dp" />

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/main_action2_1" />
                    </LinearLayout>
                </LinearLayout>

                <!-- How we help your business -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white"
                    style="@style/Segment">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:textAlignment="textStart"
                        android:text="@string/main_header_2"
                        style="@style/HeaderText"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_body_2"
                        android:textAlignment="textStart"
                        android:textColor="@color/gray_dark" />
                </LinearLayout>

                <!-- Authentication solution -->
                <LinearLayout
                    style="@style/Segment"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="@drawable/city"
                    android:backgroundTint="#4DFFFFFF"
                    android:backgroundTintMode="src_over"
                    android:orientation="vertical">

                    <TextView
                        style="@style/PreHeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_preheader_3"
                        android:textAlignment="textStart" />

                    <TextView
                        style="@style/HeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_header_3"
                        android:textAlignment="textStart" />
                </LinearLayout>

                <!-- Why Us -->
                <LinearLayout
                    style="@style/Segment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorSecondaryVariant"
                    android:orientation="vertical">

                    <TextView
                        style="@style/HeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_header_4"
                        android:textColor="@color/white"
                        android:textAlignment="textStart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_body_4"
                        android:textAlignment="textStart"
                        android:textColor="?attr/colorPrimary" />
                </LinearLayout>

                <!-- Seamless Authentication -->
                <LinearLayout
                    style="@style/Segment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        style="@style/PreHeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_preheader_5"
                        android:textAlignment="textStart" />

                    <TextView
                        style="@style/HeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_header_5"
                        android:textAlignment="textStart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_body_5"
                        android:textColor="@color/black"
                        android:textAlignment="textStart" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_action_5" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/SegmentItemPadding"
                        app:cardCornerRadius="@dimen/SegmentItemCornerRadius"
                        app:cardElevation="0dp">

                    <pl.droidsonroids.gif.GifImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/seamless_auth" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <!-- Start with -->
                <LinearLayout
                    style="@style/Segment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimaryVariant"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/PreHeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_preheader_6"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/HeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_header_6"
                        android:textAlignment="center"
                        android:textColor="?attr/colorPrimary" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/SegmentItemPadding"
                        android:text="@string/main_action_6"
                        android:backgroundTint="@android:color/holo_orange_light"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/SegmentItemPadding"
                        app:cardCornerRadius="@dimen/SegmentItemCornerRadius"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/clients" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <!-- Footer -->
                <LinearLayout
                    style="@style/Segment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorSecondaryVariant"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/copyright"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/company"
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>